force-app/main/default/objects/Proposal__c/fields/Projected_end_date__c.field-meta.xml
<CustomField>
    <fullName>Projected_end_date__c</fullName>
    <description>The date due of this grant&apos;s final milestone, or blank if not a grant</description>
    <inlineHelpText>The date due of this grant&apos;s final milestone, or blank if not a grant</inlineHelpText>
    <label>Projected end date</label>
    <type>Date</type>
</CustomField>