force-app/main/default/objects/Proposal__c/fields/Prop_num_with_renewal__c.field-meta.xml
<CustomField>
    <fullName>Prop_num_with_renewal__c</fullName>
    <description>This is the proposal code used to identify the proposal/grant</description>
    <formula>/* 
Format is last two digits of date received/created along with ID and &quot;R&quot; if a renewal,
for example, 15-12345R
*/

RIGHT(
 TEXT(
  YEAR(
   IF(NOT(ISBLANK ( Date_received__c )), Date_received__c,
     DATEVALUE(CreatedDate)
    )
  )
 ), 2
) &amp;
&quot;-&quot; &amp;
Name &amp;
IF(Is_renewal__c, &quot;R&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the proposal code used to identify the proposal/grant</inlineHelpText>
    <label>Prop num with renewal</label>
    <type>Text</type>
</CustomField>