force-app/main/default/objects/Proposal__c/fields/Proposal_submit_deadline__c.field-meta.xml
<CustomField>
    <fullName>Proposal_submit_deadline__c</fullName>
    <description>Date by which the group must submit their application (ONLINE only)</description>
    <inlineHelpText>Date by which the group must submit their application (ONLINE only)</inlineHelpText>
    <label>Proposal submit deadline</label>
    <type>Date</type>
</CustomField>