force-app/main/default/objects/Proposal__c/fields/Rationale_for_committee_approval__c.field-meta.xml
<CustomField>
    <fullName>Rationale_for_committee_approval__c</fullName>
    <description>The rationale offered to the committee for approval of this proposal/grant based on the Reason for soliciting approval</description>
    <inlineHelpText>The rationale offered to the committee for approval of this proposal/grant based on the Reason for soliciting approval</inlineHelpText>
    <label>Rationale for committee approval</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>