force-app/main/default/objects/Proposal__c/fields/Reason_for_soliciting_committee_approval__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_soliciting_committee_approval__c</fullName>
    <description>Reason for soliciting committee approval for this proposal</description>
    <inlineHelpText>Reason for soliciting committee approval for this proposal</inlineHelpText>
    <label>Reason for soliciting committee approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Board_EC_approval_reasons</valueSetName>
    </valueSet>
</CustomField>