force-app/main/default/objects/Proposal__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <description>Do we recommend the group for funding? 
High priority - Definitely fund
Conditional - Maybe, depending on funding
Hold - Not this cycle but hold for future opportunities
Do not pursue - Likely to decline</description>
    <inlineHelpText>Do we recommend the group for funding? 
High priority - Definitely fund
Conditional - Maybe, depending on funding
Hold - Not this cycle but hold for future opportunities
Do not pursue - Likely to decline</inlineHelpText>
    <label>Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High priority</fullName>
            </value>
            <value>
                <fullName>Conditional</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Do not pursue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>