force-app/main/default/objects/Proposal__c/fields/Red_flag_Non_black_list__c.field-meta.xml
<CustomField>
    <fullName>Red_flag_Non_black_list__c</fullName>
    <description>Checked if this proposal&apos;s account has been marked with the &quot;Non black-list&quot; red flag</description>
    <formula>Account__r.Red_flag_Non_black_list__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if this proposal&apos;s account has been marked with the &quot;Non black-list&quot; red flag</inlineHelpText>
    <label>Red flag: Non black-list</label>
    <type>Checkbox</type>
</CustomField>