force-app/main/default/objects/Proposal__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The region where this proposal&apos;s parent organization does its work</description>
    <inlineHelpText>The region where this proposal&apos;s parent organization does its work</inlineHelpText>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>