force-app/main/default/objects/Proposal__c/fields/Region_override__c.field-meta.xml
<CustomField>
    <fullName>Region_override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The selected region (if any) overrides the region inherited from the linked account record.</description>
    <inlineHelpText>The selected region (if any) overrides the region inherited from the linked account record.</inlineHelpText>
    <label>Region override</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Proposals (Region override)</relationshipLabel>
    <relationshipName>Proposals1</relationshipName>
    <type>Lookup</type>
</CustomField>