force-app/main/default/objects/Proposal__c/fields/Registered_NGO__c.field-meta.xml
<CustomField>
    <fullName>Registered_NGO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the organization submitting this proposal is registered as an NGO in its country</description>
    <inlineHelpText>Checked if the organization submitting this proposal is registered as an NGO in its country</inlineHelpText>
    <label>Registered NGO</label>
    <type>Checkbox</type>
</CustomField>