force-app/main/default/objects/Proposal__c/fields/Relevance_comment__c.field-meta.xml
<CustomField>
    <fullName>Relevance_comment__c</fullName>
    <description>Comment and further analysis on relevance</description>
    <inlineHelpText>Comment and further analysis on relevance</inlineHelpText>
    <label>Relevance comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>