force-app/main/default/objects/Proposal__c/fields/Request_withdrawn_reason__c.field-meta.xml
<CustomField>
    <fullName>Request_withdrawn_reason__c</fullName>
    <description>Why was the request withdrawn</description>
    <inlineHelpText>Why was the request withdrawn</inlineHelpText>
    <label>Request withdrawn reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate request</fullName>
            </value>
            <value>
                <fullName>Our delay</fullName>
            </value>
            <value>
                <fullName>No assessment</fullName>
            </value>
            <value>
                <fullName>Missed proposal submit deadline</fullName>
            </value>
            <value>
                <fullName>Open grant</fullName>
            </value>
            <value>
                <fullName>Per group&apos;s request</fullName>
            </value>
            <value>
                <fullName>Unable to award - conditional docket</fullName>
            </value>
            <value>
                <fullName>AUTOMATED: Lack of online form activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>