force-app/main/default/objects/Proposal__c/fields/Request_withdrawn_reason_other__c.field-meta.xml
<CustomField>
    <fullName>Request_withdrawn_reason_other__c</fullName>
    <description>Reason for request withdrawn prior to migration to SalesForce Summer 2015</description>
    <inlineHelpText>Reason for request withdrawn prior to migration to SalesForce Summer 2015</inlineHelpText>
    <label>Request withdrawn reason other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>