force-app/main/default/objects/Proposal__c/fields/Staff_analysis__c.field-meta.xml
<CustomField>
    <fullName>Staff_analysis__c</fullName>
    <description>Overall comments: Is this group strategic in terms of our own internal strategy for movement building? Why is a grant timely and/or important to the movement at this time? If this is a new group, provide rationale behind the decision to fund it now. If group is a renewal, include how the group has evolved over time and describe how or why not. Also include rationale for grant size. (Rationale for support)</description>
    <inlineHelpText>Overall comments: Is group strategic for movement building? Is grant timely/important? If new, rationale to fund now. If renewal, how group has evolved or why not. Also rationale for grant size.</inlineHelpText>
    <label>Staff analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>