force-app/main/default/objects/Proposal__c/fields/Staff_responsible__c.field-meta.xml
<CustomField>
    <fullName>Staff_responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The member of staff responsible for this proposal/grant</description>
    <inlineHelpText>The member of staff responsible for this proposal/grant</inlineHelpText>
    <label>Staff responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>