force-app/main/default/objects/Proposal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of this proposal (auto-maintained)</description>
    <inlineHelpText>Status of this proposal (auto-maintained)</inlineHelpText>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>