force-app/main/default/objects/Proposal__c/fields/Status_closing__c.field-meta.xml
<CustomField>
    <fullName>Status_closing__c</fullName>
    <description>That part of the status that concerns closing a grant</description>
    <inlineHelpText>That part of the status that concerns closing a grant</inlineHelpText>
    <label>Status closing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>