force-app/main/default/objects/Proposal__c/fields/Status_contract__c.field-meta.xml
<CustomField>
    <fullName>Status_contract__c</fullName>
    <description>That part of the status that concerns contracts (including pre-contract, ofac, etc.)</description>
    <inlineHelpText>That part of the status that concerns contracts (including pre-contract, ofac, etc.)</inlineHelpText>
    <label>Status contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>