force-app/main/default/objects/Proposal__c/fields/Status_external__c.field-meta.xml
<CustomField>
    <fullName>Status_external__c</fullName>
    <description>A version of this proposal&apos;s status suitable for viewing on the online apps site</description>
    <formula>IF (NOT (ISBLANK ( Date_declined__c )), &quot;Declined&quot;,
IF (NOT (ISBLANK ( Date_request_withdrawn__c )) &amp;&amp; TEXT(Request_withdrawn_reason__c) = &quot;AUTOMATED: Lack of online form activity&quot;,
&quot;Withdrawn_NoRecentActivity&quot;,
IF (NOT (ISBLANK ( Date_request_withdrawn__c )) || NOT(ISBLANK(Date_award_withdrawn__c)), &quot;Withdrawn&quot;,
IF ( Status_numeric__c &gt;= 6.2 , &quot;Awarded&quot;,
IF (NOT (ISBLANK ( Date_received__c )), &quot;Submitted&quot; ,

&quot;Pending&quot;
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A version of this proposal&apos;s status suitable for viewing on the online apps site</inlineHelpText>
    <label>Status external</label>
    <type>Text</type>
</CustomField>