force-app/main/default/objects/Proposal__c/fields/Status_milestone__c.field-meta.xml
<CustomField>
    <fullName>Status_milestone__c</fullName>
    <description>That part of the status that concerns milestones (received, overdue, summarized, etc.)</description>
    <inlineHelpText>That part of the status that concerns milestones (received, overdue, summarized, etc.)</inlineHelpText>
    <label>Status milestone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>