force-app/main/default/objects/Proposal__c/fields/Status_payment__c.field-meta.xml
<CustomField>
    <fullName>Status_payment__c</fullName>
    <description>That part of the status that concerns payments (sent, returned, problem, etc.)</description>
    <inlineHelpText>That part of the status that concerns payments (sent, returned, problem, etc.)</inlineHelpText>
    <label>Status payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>