force-app/main/default/objects/Proposal__c/fields/Status_stage__c.field-meta.xml
<CustomField>
    <fullName>Status_stage__c</fullName>
    <description>The processing stage of this proposal based on its status</description>
    <inlineHelpText>The processing stage of this proposal based on its status</inlineHelpText>
    <label>Status stage</label>
    <type>TextArea</type>
</CustomField>