force-app/main/default/objects/Proposal__c/fields/Status_under_review__c.field-meta.xml
<CustomField>
    <fullName>Status_under_review__c</fullName>
    <description>That part of the status that applies to under review proposals</description>
    <inlineHelpText>That part of the status that applies to under review proposals</inlineHelpText>
    <label>Status under review</label>
    <length>255</length>
    <type>Text</type>
</CustomField>