force-app/main/default/objects/Proposal__c/fields/Template_language__c.field-meta.xml
<CustomField>
    <fullName>Template_language__c</fullName>
    <description>Template language from this proposal&apos;s account record or, in the case of a shared community account, from its profile record.</description>
    <formula>IF ( 
 NOT(ISBLANK(TEXT(Account__r.Correspondence_language__c))),
 TEXT(Account__r.Correspondence_language__c),
 TEXT(Profile__r.Language__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Template language from this proposal&apos;s account record or, in the case of a shared community account, from its profile record.</inlineHelpText>
    <label>Template language</label>
    <type>Text</type>
</CustomField>