force-app/main/default/objects/Proposal__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <description>One of official themes</description>
    <inlineHelpText>One of official themes</inlineHelpText>
    <label>Theme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Theme</valueSetName>
    </valueSet>
</CustomField>