force-app/main/default/objects/Proposal__c/fields/Timeliness__c.field-meta.xml
<CustomField>
    <fullName>Timeliness__c</fullName>
    <description>(2) Request linked to clear window of opportunity within current context
(1) Support remains critical to the ongoing functioning of programs of the organization
(0) No urgent or critical need for funding identified</description>
    <inlineHelpText>Why is our support critical at this time?</inlineHelpText>
    <label>Timeliness</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clear window of opportunity (2)</fullName>
            </value>
            <value>
                <fullName>For organizational function (1)</fullName>
            </value>
            <value>
                <fullName>None (0)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>