force-app/main/default/objects/Proposal__c/fields/To_be_charged__c.field-meta.xml
<CustomField>
    <fullName>To_be_charged__c</fullName>
    <description>Amount awarded minus the total charged to date</description>
    <formula>Amount_awarded__c - Charged_to_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount awarded minus the total charged to date</inlineHelpText>
    <label>To be charged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>