force-app/main/default/objects/Proposal__c/fields/VP_approved_pre_award__c.field-meta.xml
<CustomField>
    <fullName>VP_approved_pre_award__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to indicate that the VP of Programs has approved the grant prior to being awarded</description>
    <inlineHelpText>Set to indicate that the VP of Programs has approved the grant prior to being awarded</inlineHelpText>
    <label>VP approved pre award</label>
    <type>Checkbox</type>
</CustomField>