force-app/main/default/objects/Proposal__c/validationRules/ClashingDateRequestWithdrawn.validationRule-meta.xml
<ValidationRule>
    <fullName>ClashingDateRequestWithdrawn</fullName>
    <active>true</active>
    <description>Date request withdrawn may only be set if Date awarded is not set.</description>
    <errorConditionFormula>AND(
 OR(
  ISCHANGED(Date_request_withdrawn__c),
  ISCHANGED(Date_awarded__c)
 ),
 NOT(ISBLANK(Date_awarded__c)),
 NOT(ISBLANK(Date_request_withdrawn__c))
)</errorConditionFormula>
    <errorDisplayField>Date_request_withdrawn__c</errorDisplayField>
    <errorMessage>Date request withdrawn may only be set if Date awarded is not set.</errorMessage>
</ValidationRule>