force-app/main/default/objects/Proposal__c/validationRules/ClashingDatesClosed.validationRule-meta.xml
<ValidationRule>
    <fullName>ClashingDatesClosed</fullName>
    <active>true</active>
    <description>&quot;Date completed&quot; and &quot;Date closed incomplete&quot; can&apos;t both have values</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK(Date_completed__c)),
 NOT(ISBLANK(Date_closed_incomplete__c))
)</errorConditionFormula>
    <errorDisplayField>Date_closed_incomplete__c</errorDisplayField>
    <errorMessage>&quot;Date completed&quot; and &quot;Date closed incomplete&quot; can&apos;t both have values</errorMessage>
</ValidationRule>