force-app/main/default/objects/Proposal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GM_ExternalID__c</columns>
    <columns>Account__c</columns>
    <columns>Region__c</columns>
    <columns>Country__c</columns>
    <columns>Date_received__c</columns>
    <columns>Status__c</columns>
    <columns>Grant_type__c</columns>
    <columns>Theme__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>