force-app/main/default/objects/Proposal__c/listViews/All_Proposals.listView-meta.xml
<ListView>
    <fullName>All_Proposals</fullName>
    <columns>NAME</columns>
    <columns>Org_name__c</columns>
    <columns>FS_Group__c</columns>
    <columns>Status__c</columns>
    <columns>Grant_type__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Proposals</label>
</ListView>